aquapool/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aquapool
  labels:
    app.kubernetes.io/managed-by: kubectl
